# todo_fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
front/: index.html  index.js
tests/: dbsetup.py  test_main.py
todo/: db.py  main.py  migrate_db.py
todo/cruds/: done.py  task.py
todo/models/: task.py
todo/routers/: done.py  task.py
todo/schemas/: task.py
