[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["hmdyt <konnyaku108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
aiomysql = "^0.1.1"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19.0"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
